<resources>
    <string name="app_name">MDCP</string>

    <string name="example_hint">
        This question seems simple, so many people fail to prepare for it,
        but it\’s crucial. Here\'s the deal: Don\’t give your complete employment (or personal) history.
    </string>

    <string name="example_question">
        Tell Me About a Challenge or Conflict You\’ve Faced at Work, and How You Dealt With It.
    </string>
    <string name="draft">Draft</string>
    <string name="submit">Submit</string>
    <string name="label_no">No</string>
    <string name="label_yes">Yes</string>
    <string name="label_clear">Clear</string>
    <string name="label_constraints">Constraints</string>
    <string name="label_helps">Helps</string>
    <string name="label_note">Note</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="label_settings">Settings</string>
    <string name="show_note_preference_off">Don\'t always show Note when opening New Questions</string>
    <string name="show_note_preference_on">Note will be shown at start of all Questions and Interview</string>
    <string name="automatic_note_on">Note will automaticall close</string>
    <string name="automatic_note_off">Note won\'t automatically close</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
</resources>