<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="8dp"
    android:layout_height="match_parent"
    tools:context=".text.TextActivity">

    <TextView
        android:id="@+id/question_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Q45b"
        android:textStyle="bold"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/question_name"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:text="@string/example_question"
        app:layout_constraintEnd_toEndOf="@+id/question_label"
        app:layout_constraintStart_toStartOf="@+id/question_label"
        app:layout_constraintTop_toBottomOf="@+id/question_label" />

    <TextView
        android:id="@+id/question_hint"
        style="@style/Widget.MaterialComponents.TextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/example_hint"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/question_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/question_name"
        app:layout_constraintTop_toBottomOf="@+id/question_name" />

    <EditText
        android:id="@+id/answer"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/text_edit_border"
        android:gravity="start|center"
        android:inputType="text"
        android:padding="5dp"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/next"
        app:layout_constraintEnd_toEndOf="@+id/question_hint"
        app:layout_constraintStart_toStartOf="@+id/question_hint"
        app:layout_constraintTop_toBottomOf="@+id/question_hint"
        app:layout_constraintVertical_bias="0.01999998" />

    <Button
        android:id="@+id/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/draft"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/answer"
        app:layout_constraintTop_toTopOf="@+id/next"/>

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/answer"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/previous"/>

</androidx.constraintlayout.widget.ConstraintLayout>